--- a/src/02-lightbox.html
+++ b/src/02-lightbox.html
@@ -7,6 +7,9 @@
     <title>SimpleLightbox library</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.8.1/simple-lightbox.min.css"
+      integrity="sha512-+rdEdJmlLz2gw3xsRe+RXSj/B6aMyt1XghLQ1JoFxbu68S4SXxhwOYZwmvguwiEeKfinuVnlHDRpwF+e9Hm5Pg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -15,5 +18,8 @@
     <ul class="gallery"></ul>
 
     <script src="js/02-lightbox.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.8.1/simple-lightbox.min.js"
+      integrity="sha512-LPhjciDZndJwXCGxIzJnAlx2YXJ/m49+RlEAcoeohn5ItgaEK1gnmp+6YL7hojE4lAHcc8VtN5Tb/ZPh+s0v0Q=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </body>
 </html>
